--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Hello...Test Git!
-This is updated from github.
+This is updated from github.It is  from our project.
 </body>
 </html>
